--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=SpringAuthJDBC
 spring.datasource.name=dashboard
 spring.datasource.generate-unique-name=false
 spring.h2.console.enabled=true
+
+logging.level.org.springframework.security=TRACE
