--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=SpringAuthJDBC
 
-spring.datasource.name=dashboard
+#spring.datasource.name=User
 spring.datasource.generate-unique-name=false
 spring.h2.console.enabled=true
 
